--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:people
+spring.datasource.username=sa
+spring.datasource.password=
 
+#jpa
+spring.jpa.database.platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.dd1-auto=update
+
+#h2
+spring.h2.console.enable=true
+spring.h2.console.path=/h2-console
